--- a/404.html
+++ b/404.html
@@ -213,7 +213,7 @@ h2, h3, h4 {
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 </div>
 </header>
 <main>
@@ -223,7 +223,7 @@ h2, h3, h4 {
 <h2>Page Not Found </h2>
 <h2><b>¯\_(ツ)_/¯</b></h2>
 <p>Die Seite ist nicht verfügbar...<br>
-...oder in einem anderen Verzeichnis.</p>
+...oder in einem anderen Verzeichnis</p>
 <div class="search-container">
     <form accept-charset="UTF-8" id="search" action="/search" method="get">
     <label for="search">Was suchst du? </label><br><br>
