--- a/Cheats.htm
+++ b/Cheats.htm
@@ -15,7 +15,7 @@ system,netzwerk,integration,programmierung
 snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
 <!-- Favicon -->
-<link rel="icon" href="https://www.jumi.biz/assets/img/ico/jumi.ico">
+<link rel="icon" href="assets/img/ico/jumi.ico">
 <title>jumi</title>
 <!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
@@ -55,8 +55,7 @@ snippets,vorlagen,lernen,verstehen,
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
 <img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i>
 <span id="wtf-is-jumi">wtf is jumi?</span></a></li>
-</ul></nav></div></header>
-<main>
+</ul></nav></div></header><main>
 
 <div class="grid-container"><article class="content flow">
 <h2 class="bigHL">GTA San Andreas (PS2)</h2>
@@ -92,12 +91,12 @@ snippets,vorlagen,lernen,verstehen,
 <!-- IMPRESSUM -->
 <footer><span class="flex profil-links">
 <!-- github.com/xuser123 -->
-<a id="githubIcon" href="https://github.com/xuser123" target="_blank">
-<img src="https://www.jumi.biz/assets/img/ico/github.ico" alt="Github/xuser123">
+<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<img src="assets/img/ico/github.ico" alt="Github/xuser123">
 </a>&#32;
 <!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank">
-<img src="https://www.jumi.biz/assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
+<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
 </a></span>
 
 <!-- contact@jumi.biz -->
@@ -108,24 +107,33 @@ contact&#64;jumi.biz
 <span class="flex siteFeatures">
 <!-- Export -Feature (inaktiv)-->
 <a id="exportIcon">
-<img src="https://www.jumi.biz/assets/img/ico/exportPDF.ico" alt="Export as PDF">
+<img src="assets/img/ico/exportPDF.ico" alt="Export as PDF">
 <!-- PDF-Export-Script (jsPDF):
 https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="https://www.jumi.biz/assets/js/jspdf.umd.min.js"> -->
+<script src="assets/js/jspdf.umd.min.js"> -->
 </a>&#32;
 
 <!-- Zum Seitenanfang -Feature (aktiv)-->
 <a id="scrollToTop" href="#">
-<img src="https://www.jumi.biz/assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+<img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
 </a></span></footer>
 
-    <!-- JavaScript -->
-    <script src="https://www.jumi.biz/assets/js/menu.js"></script>
-	<script src="https://www.jumi.biz/assets/js/modal.js"></script>
+    <!-- PDF-Export-Script (jsPDF):
+https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
+<script src="assets/js/jspdf.umd.min.js"> -->
 
-    <!-- for Easteregg Project:
-    <script src="https://www.jumi.biz/assets/js/read.js"></script> -->
-
+<!-- HTML-Analyzer Debugging ->
+<h1>HTML-Analyzer</h1>
+<div class="flex">
+<h3>Tags:</h3>
+<ul id="tagList"></ul>
+<h3>Classes:</h3>
+<ul id="classList"></ul>
+<h3>IDs:</h3>
+<ul id="idList"></ul>
+</div>
+<script src="assets/js/html-analyzer.js"></script>
+<!- HTML-Analyzer Debugging -->
 
 </body>
 </html>
