--- a/Content.htm
+++ b/Content.htm
@@ -15,7 +15,7 @@ system,netzwerk,integration,programmierung
 snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
 <!-- Favicon -->
-<link rel="icon" href="https://www.jumi.biz/assets/img/ico/jumi.ico">
+<link rel="icon" href="assets/img/ico/jumi.ico">
 <title>jumi</title>
 <!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
@@ -80,17 +80,17 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
   </div>
@@ -101,33 +101,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
   </div>
@@ -138,33 +138,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
   </div>
@@ -175,33 +175,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
   </div>
@@ -212,33 +212,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
+        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
   </div>
@@ -246,12 +246,12 @@ snippets,vorlagen,lernen,verstehen,
 <!-- IMPRESSUM -->
 <footer><span class="flex profil-links">
 <!-- github.com/xuser123 -->
-<a id="githubIcon" href="https://github.com/xuser123" target="_blank">
-<img src="https://www.jumi.biz/assets/img/ico/github.ico" alt="Github/xuser123">
+<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<img src="assets/img/ico/github.ico" alt="Github/xuser123">
 </a>&#32;
 <!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank">
-<img src="https://www.jumi.biz/assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
+<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
 </a></span>
 
 <!-- contact@jumi.biz -->
@@ -262,24 +262,33 @@ contact&#64;jumi.biz
 <span class="flex siteFeatures">
 <!-- Export -Feature (inaktiv)-->
 <a id="exportIcon">
-<img src="https://www.jumi.biz/assets/img/ico/exportPDF.ico" alt="Export as PDF">
+<img src="assets/img/ico/exportPDF.ico" alt="Export as PDF">
 <!-- PDF-Export-Script (jsPDF):
 https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="https://www.jumi.biz/assets/js/jspdf.umd.min.js"> -->
+<script src="assets/js/jspdf.umd.min.js"> -->
 </a>&#32;
 
 <!-- Zum Seitenanfang -Feature (aktiv)-->
 <a id="scrollToTop" href="#">
-<img src="https://www.jumi.biz/assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+<img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
 </a></span></footer>
 
-    <!-- JavaScript -->
-    <script src="https://www.jumi.biz/assets/js/menu.js"></script>
-	<script src="https://www.jumi.biz/assets/js/modal.js"></script>
+    <!-- PDF-Export-Script (jsPDF):
+https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
+<script src="assets/js/jspdf.umd.min.js"> -->
 
-    <!-- for Easteregg Project:
-    <script src="https://www.jumi.biz/assets/js/read.js"></script> -->
-
+<!-- HTML-Analyzer Debugging ->
+<h1>HTML-Analyzer</h1>
+<div class="flex">
+<h3>Tags:</h3>
+<ul id="tagList"></ul>
+<h3>Classes:</h3>
+<ul id="classList"></ul>
+<h3>IDs:</h3>
+<ul id="idList"></ul>
+</div>
+<script src="assets/js/html-analyzer.js"></script>
+<!- HTML-Analyzer Debugging -->
 
 </body>
 </html>
