--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
-
 <!-- Optimierung für Mobilgeräte -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <!-- HTTP-Header -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 <!-- Metadaten -->
 <meta name="description" content="
 Sammlung von Themen über Informatik, kompakt.
@@ -17,16 +14,14 @@ technologie,fachinformatik,computer,pc,
 system,netzwerk,integration,programmierung
 snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
-
 <!-- Favicon -->
-<link rel="icon" href="https://www.jumi.biz/assets/img/ico/jumi.ico">
+<link rel="icon" href="assets/img/ico/jumi.ico">
 <title>jumi</title>
-
 <!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
-        <style>* {border: 1px solid red;}</style> -->
+        <style>* {border: 1px solid red;}</style>-->
 
-<!-- Layout -->
+<!-- Sheets -->
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="assets/css/menu.css">
 <link rel="stylesheet" href="assets/css/main.css">
@@ -58,13 +53,9 @@ snippets,vorlagen,lernen,verstehen,
 <li><a href="https://www.jumi.biz/Cheats.htm"><i class="menu-icon">
 <img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
-<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
-
-</ul>
-</nav>
-</div>
-</header>
-<main>
+<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i>
+<span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+</ul></nav></div></header><main>
 
 <!-- MAIN -->
 <div class="grid-container">
@@ -180,12 +171,12 @@ alt="Picture shows computer">
 <!-- IMPRESSUM -->
 <footer><span class="flex profil-links">
 <!-- github.com/xuser123 -->
-<a id="githubIcon" href="https://github.com/xuser123" target="_blank">
-<img src="https://www.jumi.biz/assets/img/ico/github.ico" alt="Github/xuser123">
+<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<img src="assets/img/ico/github.ico" alt="Github/xuser123">
 </a>&#32;
 <!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank">
-<img src="https://www.jumi.biz/assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
+<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
 </a></span>
 
 <!-- contact@jumi.biz -->
@@ -196,23 +187,33 @@ contact&#64;jumi.biz
 <span class="flex siteFeatures">
 <!-- Export -Feature (inaktiv)-->
 <a id="exportIcon">
-<img src="https://www.jumi.biz/assets/img/ico/exportPDF.ico" alt="Export as PDF">
+<img src="assets/img/ico/exportPDF.ico" alt="Export as PDF">
 <!-- PDF-Export-Script (jsPDF):
 https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="https://www.jumi.biz/assets/js/jspdf.umd.min.js"> -->
+<script src="assets/js/jspdf.umd.min.js"> -->
 </a>&#32;
 
 <!-- Zum Seitenanfang -Feature (aktiv)-->
 <a id="scrollToTop" href="#">
-<img src="https://www.jumi.biz/assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+<img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
 </a></span></footer>
 
-    <!-- JavaScript -->
-    <script src="https://www.jumi.biz/assets/js/menu.js"></script>
-	<script src="https://www.jumi.biz/assets/js/modal.js"></script>
+    <!-- PDF-Export-Script (jsPDF):
+https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
+<script src="assets/js/jspdf.umd.min.js"> -->
 
-    <!-- for Easteregg Project:
-    <script src="https://www.jumi.biz/assets/js/read.js"></script> -->
+<!-- HTML-Analyzer Debugging ->
+<h1>HTML-Analyzer</h1>
+<div class="flex">
+<h3>Tags:</h3>
+<ul id="tagList"></ul>
+<h3>Classes:</h3>
+<ul id="classList"></ul>
+<h3>IDs:</h3>
+<ul id="idList"></ul>
+</div>
+<script src="assets/js/html-analyzer.js"></script>
+<!- HTML-Analyzer Debugging -->
 
 </body>
 </html>
