--- a/Links.htm
+++ b/Links.htm
@@ -1,11 +1,8 @@
 <!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
-
 <!-- Optimierung für Mobilgeräte -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <!-- HTTP-Header -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 <!-- Metadaten -->
 <meta name="description" content="
 Sammlung von Themen über Informatik, kompakt.
@@ -17,16 +14,14 @@ technologie,fachinformatik,computer,pc,
 system,netzwerk,integration,programmierung
 snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
-
 <!-- Favicon -->
 <link rel="icon" href="assets/img/ico/jumi.ico">
 <title>jumi</title>
-
 <!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
-        <style>* {border: 1px solid red;}</style> -->
+        <style>* {border: 1px solid red;}</style>-->
 
-<!-- Layout -->
+<!-- Sheets -->
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="assets/css/menu.css">
 <link rel="stylesheet" href="assets/css/main.css">
@@ -39,7 +34,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -51,20 +46,16 @@ snippets,vorlagen,lernen,verstehen,
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://jumi.biz"><i class="menu-icon">
-<img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
-
-</ul>
-</nav>
-</div>
-</header>
-<main>
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="https://www.jumi.biz/Links.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="https://www.jumi.biz/Cheats.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i>
+<span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+</ul></nav></div></header><main>
 
 <div class="grid-container">
 <article class="content flow">
@@ -73,21 +64,21 @@ snippets,vorlagen,lernen,verstehen,
 <li><a href="https://www.theodinproject.com" target="_blank">TheOdinProject.com</a></li>
 <li><a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp.org</a></li>
 <li><a href="https://www.tryhackme.com" target="_blank">TryHackMe.com</a></li>
-<li><a href="https://media.ccc.de" target="_blank">media.ccc.de</a></li>
+<li><a href="https://www.media.ccc.de" target="_blank">media.ccc.de</a></li>
 </ul>
 </article>
 <article class="content flow">
 <h4>Et cetera</h4>
 <ul>
 <li><a href="https://www.virustotal.com/" target="_blank">Virus Total</a></li>
-<li><a href="https://codepen.io/pen/" target="_blank">CodePen</a></li>
-<li><a href="https://code.sgo.to/typograms/#related" target="_blank">Typogramme</a></li>
+<li><a href="https://www.codepen.io/pen/" target="_blank">CodePen</a></li>
+<li><a href="https://www.code.sgo.to/typograms/#related" target="_blank">Typogramme</a></li>
 </ul>
 </article>
 <article class="content flow">
 <h4>Künstliche Intelligenz</h4>
 <ul>
-<li><a href="https://you.com/" target="_blank">You.com</a></li>
+<li><a href="https://www.you.com/" target="_blank">You.com</a></li>
 </ul>
 </article>
 <article class="content flow">
@@ -95,8 +86,8 @@ snippets,vorlagen,lernen,verstehen,
 <ul>
 <li><a href="https://www.youtube.com/c/cryochamberlabel" target="_blank">Cryo Chamber</a></li>
 <li><a href="https://www.youtube.com/@VaporMemory" target="_blank">Vapor Memory</a></li>
-<li><a href="https://the80sguy.org/sub" target="_blank">The '80s Guy</a></li>
-<li><a href="https://8bit.fm/" target="_blank">8bit.fm</a></li>
+<li><a href="https://www.the80sguy.org/sub" target="_blank">The '80s Guy</a></li>
+<li><a href="https://www.8bit.fm/" target="_blank">8bit.fm</a></li>
 <li><a href="https://www.youtube.com/c/LofiGirl" target="_blank">Lofi Girl</a></li>
 </ul>
 </article>
@@ -130,21 +121,35 @@ snippets,vorlagen,lernen,verstehen,
 </article>
 </div>
 </main>
-
-<footer>
 <!-- IMPRESSUM -->
-<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
-<!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
-<!-- Site Features -->
-<span class="flex siteFeatures"><a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
-</footer>
+<footer><span class="flex profil-links">
+<!-- github.com/xuser123 -->
+<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<img src="assets/img/ico/github.ico" alt="Github/xuser123">
+</a>&#32;
+<!-- instagram.com/jumicontent -->
+<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
+</a></span>
 
-<!-- Skripte -->
-    <script src="assets/js/menu.js"></script>
-	<script src="assets/js/modal.js"></script>
-    <!-- for Easteregg Project:
-    <script src="assets/js/read.js"></script> -->
+<!-- contact@jumi.biz -->
+<span class="jumi-email">
+contact&#64;jumi.biz
+</span>
+
+<span class="flex siteFeatures">
+<!-- Export -Feature (inaktiv)-->
+<a id="exportIcon">
+<img src="assets/img/ico/exportPDF.ico" alt="Export as PDF">
+<!-- PDF-Export-Script (jsPDF):
+https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
+<script src="assets/js/jspdf.umd.min.js"> -->
+</a>&#32;
+
+<!-- Zum Seitenanfang -Feature (aktiv)-->
+<a id="scrollToTop" href="#">
+<img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+</a></span></footer>
 
     <!-- PDF-Export-Script (jsPDF):
 https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
