--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -45,11 +45,23 @@ Daten technisch und organisatorisch vor unbefugtem Zugriff, Verlust, Diebstahl o
 <b><span style='color:#da4453;'>- </span></b>Kollisionsbereiche minimieren
 <b><span style='color:#da4453;'>- </span></b>Gruppenzugehörigkeiten flexibel anpassen
 <b><span style='color:#da4453;'>- </span></b>Datenverkehr spezifisch trennen
+<b><span style='color:#da4453;'>	- </span></b>VLANs über mehrere VLAN-fähige Switche
+<b><span style='color:#da4453;'>		- </span></b>z.B. Trunk Ports
+<b><span style='color:#da4453;'>		- </span></b>etikettierte Ethernet-Frames
+<b><span style='color:#da4453;'>			- </span></b>Kennzeichnung der VLAN-Zugehörigkeit
 
 <b><span style='color:#8e44ad;'>## Datenschutz</span></b>
 <b><span style='color:#8e44ad;'>### Gesetze und Regelungen</span></b>
-<b><span style='color:#da4453;'>- </span></b>sensible Informationen
-<b><span style='color:#da4453;'>- </span></b>Privatsphäre und Rechte
+<b><span style='color:#da4453;'>- </span></b>Vorschriften aus <b>**Kapitel 3 der DSGVO**</b>
+<b><span style='color:#da4453;'>- </span></b><b>**personenbezogene Daten**</b> schützen
+<b><span style='color:#da4453;'>- </span></b>sensible Informationen sichern
+<b><span style='color:#da4453;'>- </span></b>Privatsphäre und Rechte einhalten
+<b><span style='color:#da4453;'>- </span></b>Informationspflichten erfüllen
+<b><span style='color:#da4453;'>- </span></b>Rechte der Personen im Datensatz
+<b><span style='color:#da4453;'>- </span></b><b>**Datenminimierung**</b>
+<b><span style='color:#da4453;'>	- </span></b>Nur zweckgebundene Daten sammeln
+<b><span style='color:#da4453;'>		- </span></b>für unbedingt notwendige Verarbeitungszwecke
+<b><span style='color:#da4453;'>	- </span></b>Schutz vor übermäßiger Speicherung
 
 <b><span style='color:#8e44ad;'>### Rechtliche und ethische Verantwortung von Organisationen und Einzelpersonen über das angemessene</span></b>
 <b><span style='color:#da4453;'>- </span></b>sammeln,
@@ -63,12 +75,24 @@ Daten technisch und organisatorisch vor unbefugtem Zugriff, Verlust, Diebstahl o
 <b><span style='color:#da4453;'>- </span></b>personell
 
 <b><span style='color:#8e44ad;'>## IT-Sicherheitsmanagement</span></b>
-<b><span style='color:#da4453;'>- </span></b>ISMS
+<b><span style='color:#da4453;'>- </span></b><b>**ISMS**</b> Informationssicherheits-Managementsystem
 
 <b><span style='color:#8e44ad;'>## Standards</span></b>
-<b><span style='color:#da4453;'>- </span></b>ISO 27001
-<b><span style='color:#da4453;'>- </span></b>ISO 27002
+<b><span style='color:#da4453;'>- </span></b>ISO/IEC 27000
+<b><span style='color:#da4453;'>	- </span></b>Überblick über Zusammenhänge in ISO/IEC 2700x-Familie
+<b><span style='color:#da4453;'>	- </span></b>grundlegende Begriffe und Definitionen für ISMS
+<b><span style='color:#da4453;'>- </span></b>ISO/IEC 27001
+<b><span style='color:#da4453;'>	- </span></b>inter. Norm für ISMS
+<b><span style='color:#da4453;'>	- </span></b>erfüllt Anforderung für Zertifizierungsmöglichkeit
+<b><span style='color:#da4453;'>- </span></b>ISO 27002 (Code of practice for information security controls)
+<b><span style='color:#da4453;'>	- </span></b>unterstützt bei Auswahl und Umsetzung von ISO/IEC 27001 Maßnahmen
+<b><span style='color:#da4453;'>	- </span></b>Sicherheitsmanagement aufbauen und verankern
 <b><span style='color:#da4453;'>- </span></b>BSI IT-Grundschutz
+<b><span style='color:#da4453;'>- </span></b>BSI-Standard 200-1
+<b><span style='color:#da4453;'>	- </span></b>allgemeine Anforderungen an ISMS
+<b><span style='color:#da4453;'>- </span></b>BSI-Standard 200-2
+<b><span style='color:#da4453;'>	- </span></b>Basis der BSI-Methodik
+<b><span style='color:#da4453;'>	- </span></b>Aufbau des ISMS
 
 <b><span style='color:#8e44ad;'>## ISO/IEC 27001 -Zertifizierung</span></b>
 <b><span style='color:#da4453;'>- </span></b>international anerkannter Standard
@@ -348,14 +372,17 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>- </span></b>Security by Design
 <b><span style='color:#da4453;'>- </span></b>Security by Default
 <b><span style='color:#da4453;'>- </span></b>Datensicherung
-<b><span style='color:#da4453;'>	- </span></b>Backup-Verfahren
+<b><span style='color:#da4453;'>	- </span></b>Backup auf Speichermedien
 <b><span style='color:#da4453;'>		- </span></b>inkrementell
 <b><span style='color:#da4453;'>		- </span></b>differenziell
-<b><span style='color:#da4453;'>		- </span></b>Vollbackup
-<b><span style='color:#da4453;'>	- </span></b>Generationenprinzip
-<b><span style='color:#da4453;'>		- </span></b>Großvater
-<b><span style='color:#da4453;'>		- </span></b>Vater
-<b><span style='color:#da4453;'>		- </span></b>Sohn
+<b><span style='color:#da4453;'>		- </span></b>voll
+<b><span style='color:#da4453;'>		- </span></b>Rotationsschema
+<b><span style='color:#da4453;'>			- </span></b>Generationenprinzip
+<b><span style='color:#da4453;'>			- </span></b>Großvater-Vater-Sohn-Prinzip
+<b><span style='color:#da4453;'>				- </span></b>20 Speichermedien bei 5-Tage-Wochen-Zyklus
+<b><span style='color:#da4453;'>					- </span></b>4 Sohn-Medien für Tage (inkrementell)
+<b><span style='color:#da4453;'>					- </span></b>4 Vater-medien für Wochen (voll)
+<b><span style='color:#da4453;'>					- </span></b>12 Großvater-Medien für Monate (voll)
 <b><span style='color:#da4453;'>	- </span></b>Backupmedien-Kriterien
 <b><span style='color:#da4453;'>		- </span></b>Lebensdauer
 <b><span style='color:#da4453;'>		- </span></b>Zugriffsgeschwindigkeit
@@ -394,6 +421,13 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>		- </span></b>aktuelles Gefährdungspotenzial
 <b><span style='color:#da4453;'>		- </span></b>geeignete Maßnahmen
 <b><span style='color:#da4453;'>		- </span></b>Kosten-Nutzen / Risikoberechnung
+<b><span style='color:#da4453;'>		- </span></b><b>**Nutzwertanalyse**</b>
+<b><span style='color:#da4453;'>			- </span></b>Kriterien
+<b><span style='color:#da4453;'>				- </span></b>Preis
+<b><span style='color:#da4453;'>				- </span></b>Qualität
+<b><span style='color:#da4453;'>			- </span></b>Punkteskala
+<b><span style='color:#da4453;'>			- </span></b>Summenwerte vergleichen
+<b><span style='color:#da4453;'>				- </span></b>Gewichtung * Punktzahl
 <b><span style='color:#da4453;'>	- </span></b>Vermeidungsstrategien
 <b><span style='color:#da4453;'>	- </span></b>Verschrottung
 <b><span style='color:#da4453;'>		- </span></b>sichere Löschung vor der Verschrottung
@@ -462,6 +496,11 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>- </span></b>PKI
 <b><span style='color:#da4453;'>- </span></b>Techniken
 <b><span style='color:#da4453;'>	- </span></b>HTTPS over TLS
+<b><span style='color:#da4453;'>	- </span></b>zentral-verschlüsselte E-Mails
+<b><span style='color:#da4453;'>		- </span></b>digital-signiert durch TLS/SSL-Zertifikate
+<b><span style='color:#da4453;'>			- </span></b><b>**POP3**</b> Post-Office Protocol (Port 995)
+<b><span style='color:#da4453;'>			- </span></b><b>**IMAP**</b> Internet Message Access Protocol (Port 993)
+<b><span style='color:#da4453;'>			- </span></b><b>**SMTP**</b> Simple Mail Transfer Protocol (Port 465/587)
 <b><span style='color:#da4453;'>	- </span></b>SSH vs. Telnet
 <b><span style='color:#da4453;'>	- </span></b>Wireless Personal-Key-Authentication (WPA/PSK)
 <b><span style='color:#da4453;'>		- </span></b><b>**SSID**</b> Service Set Identifier
@@ -485,6 +524,11 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>	- </span></b>WPA2-Personal/Enterprise
 <b><span style='color:#da4453;'>	- </span></b>WPA3-Personal/Enterprise
 <b><span style='color:#da4453;'>	- </span></b>Endpoint-Security
+<b><span style='color:#da4453;'>		- </span></b>Zugriffskontrolle
+<b><span style='color:#da4453;'>		- </span></b>Isolation
+<b><span style='color:#da4453;'>		- </span></b>Überwachung
+<b><span style='color:#da4453;'>		- </span></b>Verwaltung
+<b><span style='color:#da4453;'>		- </span></b>Whitelists oder Blacklists
 <b><span style='color:#da4453;'>	- </span></b>Application Controlled
 <b><span style='color:#da4453;'>	- </span></b>Datenverschlüsselung
 <b><span style='color:#da4453;'>	- </span></b>Virenscanner
@@ -498,7 +542,32 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>- </span></b>Authentifizierung
 <b><span style='color:#da4453;'>- </span></b>Autorisierung
 <b><span style='color:#da4453;'>- </span></b>MFA
-<b><span style='color:#da4453;'>- </span></b>Password-Policy
+<b><span style='color:#da4453;'>- </span></b>Passwortrichtlinien (Password-Policy)
+<b><span style='color:#da4453;'>	- </span></b>Entropie durch Zeichenlänge und -kombination
+<b><span style='color:#da4453;'>		- </span></b>Mindestlänge (8,12 oder 22 Zeichen)
+<b><span style='color:#da4453;'>		- </span></b>Groß- und Kleinbuchstaben, Zahlen und Sonderzeichen
+<b><span style='color:#da4453;'>				- </span></b>entspricht <b>**94 mögliche Zeichen**</b>
+<b><span style='color:#da4453;'>					- </span></b>26 Großbuchstaben
+<b><span style='color:#da4453;'>					- </span></b>26 Kleinbuchstaben
+<b><span style='color:#da4453;'>					- </span></b>10 Zahlen
+<b><span style='color:#da4453;'>					- </span></b>32 Sonderzeichen
+<b><span style='color:#da4453;'>				- </span></b>2(hoch)n=94(hoch)L
+<b><span style='color:#da4453;'>					- </span></b>n=(Bitstärke), L=(Passwortlänge)
+<b><span style='color:#da4453;'>						- </span></b>8 Zeichen = 2(hoch)n=94(hoch)8
+<b><span style='color:#da4453;'>							- </span></b>N =~ 52,8
+<b><span style='color:#da4453;'>							- </span></b>entspricht 53-bit
+<b><span style='color:#da4453;'>						- </span></b>64-bit = 2(hoch)64=94(hoch)L
+<b><span style='color:#da4453;'>							- </span></b>L =~ 11,3
+<b><span style='color:#da4453;'>							- </span></b>entspricht 12 Zeichen
+<b><span style='color:#da4453;'>						- </span></b>128-bit = 2(hoch)128=94(hoch)L
+<b><span style='color:#da4453;'>							- </span></b>L =~ 21,5
+<b><span style='color:#da4453;'>							- </span></b>entspricht 22 Zeichen
+<b><span style='color:#da4453;'>	- </span></b>Keine Logindatenbestandteile im Passwort selbst
+<b><span style='color:#da4453;'>	- </span></b>Ablaufdatum für Passwörter (z.B. 30-90 Tage)
+<b><span style='color:#da4453;'>	- </span></b>Begrenzte Loginversuche
+<b><span style='color:#da4453;'>	- </span></b>Kontosperre bei Login-Fehlversuchen
+<b><span style='color:#da4453;'>	- </span></b>Optional: Einpräsame Passwortsätze
+<b><span style='color:#da4453;'>	- </span></b>Optional: Multi-Factor-Authentication (MFA)
 
 
 <b><span style='color:#8e44ad;'>## Phasen eines Sicherheitsprozess</span></b>
@@ -553,6 +622,11 @@ Sicherheitsmanagement (ISMS)
 <b><span style='color:#da4453;'>			- </span></b>Stromausfall...
 <b><span style='color:#da4453;'>		- </span></b>4-10 ms Umschaltzeit
 
+<b><span style='color:#da4453;'>- </span></b>zentral-verschlüsselte E-Mails
+<b><span style='color:#da4453;'>	- </span></b>digital-signiert durch TLS/SSL-Zertifikate
+<b><span style='color:#da4453;'>		- </span></b><b>**POP3**</b> Post-Office Protocol (Port 995)
+<b><span style='color:#da4453;'>		- </span></b><b>**IMAP**</b> Internet Message Access Protocol (Port 993)
+<b><span style='color:#da4453;'>		- </span></b><b>**SMTP**</b> Simple Mail Transfer Protocol (Port 465/587)
 
 </pre>
 </body>
