--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -1,25 +1,27 @@
 <!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
-
 <!-- Optimierung für Mobilgeräte -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <!-- HTTP-Header -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 <!-- Metadaten -->
-<meta name="description" content="Projektmanagement
-"><meta name="keywords" content="Projektmanagement,Methoden,Modelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Bedarfe,Kundenberatung,Präsentieren,Marketing,Angebotsvergleich,Hardware,Netzwerktechnik,Multimedia,Internet,Software,Betriebssysteme,Soft,areentwicklung,Qualitätssicherung,it,sicherheit,datenschutz,Verträge,Leistungserbringung,Change,Management
+<meta name="description" content="
+Sammlung von Themen über Informatik, kompakt.
+"><meta name="keywords" content="
+linux,windows,sicherheit,hacking,
+administration,code,shell,terminal,syntax,
+tool,programm,it,informatik,information,
+technologie,fachinformatik,computer,pc,
+system,netzwerk,integration,programmierung
+snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
-
 <!-- Favicon -->
 <link rel="icon" href="../assets/img/ico/jumi.ico">
 <title>jumi</title>
-
 <!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
         <style>* {border: 1px solid red;}</style>-->
 
-<!-- Layout -->
+<!-- Sheets -->
 <link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="../assets/css/menu.css">
 <link rel="stylesheet" href="../assets/css/main.css">
@@ -32,7 +34,7 @@
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -44,21 +46,18 @@
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
-<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
-<img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
-<img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://jumi.biz"><i class="menu-icon">
-<img src="../assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="https://www.jumi.biz/Links.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="https://www.jumi.biz/Cheats.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i>
+<span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+</ul></nav></div></header><main>
 
-</ul>
-</nav>
-</div>
-</header>
-<main>
-
+<!-- MAIN -->
 <div class="grid-container">
 <article class="content flow">
 
