--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -73,7 +73,34 @@ snippets,vorlagen,lernen,verstehen,
 <li><b>Zurechenbarkeit</b> Nachverfolgbarkeit von Aktivitäten</li>
 <li><b>Unbestreitbarkeit</b> Sicherstellung durchgeführter Handlungen </li></ol>
 <h2><a name="Datensicherheit"></a><b>Datensicherheit</b> </h2>
-<p>Daten technisch und organisatorisch vor unbefugtem Zugriff, Verlust, Diebstahl oder Beschädigung schützen. - Verschlüsselung - Firewalls - paketorientiert (klassisch) - zustandsorientierte Paketüberprüfung - <b>Stateful Packet Inspection</b> (SPI) - Zuordnung aktiver Sitzungen - auf Vermittlungsschicht (OSI-Schicht 3) - Zwischenspeicher für Verbindungsstatus - in dynamischen Zustandstabellen - Auswertung durch TCP SYN-/ACK-/FIN-Bits - auch (zustandslose) UDP-Datenpakete - Mehrstufige Konzepte - Regeln für Endpoints und Clients - Zugriffskontrollen - Sicherheitsaudits. </p>
+<p>Daten technisch und organisatorisch vor</p>
+<ul><li>unbefugtem Zugriff
+</li><li>Verlust
+</li><li>Diebstahl
+</li><li>Beschädigung
+</li><p>schützen, beispielsweise mittels</p>
+<ul><li>Verschlüsselung
+</li><ul><li>zentral-verschlüsselte E-Mails
+<ul><li>digital-signiert durch TLS/SSL-Zertifikate
+<ul><li><b>POP3</b> Post-Office Protocol (Port 995)</li>
+<li><b>IMAP</b> Internet Message Access Protocol (Port 993)</li>
+<li><b>SMTP</b> Simple Mail Transfer Protocol (Port 465/587) </li>
+</ul></li></ul></ul>
+<li>Firewalls
+</li><ul><li>paketorientiert (klassisch)
+</li><li>zustandsorientierte Paketüberprüfung
+</li><ul><li><b>Stateful Packet Inspection</b> (SPI)
+</li><li>Zuordnung aktiver Sitzungen
+</li><li>auf Vermittlungsschicht (OSI-Schicht 3)
+</li><li>Zwischenspeicher für Verbindungsstatus
+</li><li>in dynamischen Zustandstabellen
+</li><li>Auswertung durch TCP SYN-/ACK-/FIN-Bits
+</li><li>auch (zustandslose) UDP-Datenpakete
+</li><li>Mehrstufige Konzepte
+</li><li>Regeln für Endpoints und Clients</li></ul></ul>
+<li>Zugriffskontrollen
+</li><li>Sicherheitsaudits</li></ul>
+
 <h3><a name="Netzwerksegmentierung-durch-VLAN"></a><b>Netzwerksegmentierung durch VLAN</b> </h3>
 <ul><li>Netze logisch trennen</li>
 <li>Datenverkehr priorisieren</li>
@@ -147,59 +174,59 @@ snippets,vorlagen,lernen,verstehen,
 <li>Prozess Bausteine</li>
 <li>System Bausteine </li></ul>
 <h2><a name="Elementare-Gef-c3--a4-hrdungen"></a><b>Elementare Gefährdungen</b> </h2>
-<ul><li>Feuer ,</li>
-<li>Ungünstige klimatische Bedingungen ,</li>
-<li>Wasser ,</li>
-<li>Verschmutzung, Staub, Korrosion ,</li>
-<li>Naturkatastrophen ,</li>
-<li>Katastrophen im Umfeld ,</li>
-<li>Großereignisse im Umfeld ,</li>
-<li>Ausfall oder Störung der Stromversorgung ,</li>
-<li>Ausfall oder Störung von Kommunikationsnetzen ,</li>
-<li>Ausfall oder Störung von Versorgungsnetzen ,</li>
-<li>Ausfall oder Störung von Dienstleistungsunternehmen ,</li>
-<li>Elektromagnetische Störstrahlung ,</li>
-<li>Abfangen kompromittierender Strahlung ,</li>
-<li>Ausspähen von Informationen (Spionage) ,</li>
-<li>Abhören ,</li>
-<li>Diebstahl von Geräten, Datenträgern oder Dokumenten ,</li>
-<li>Verlust von Geräten, Datenträgern oder Dokumenten ,</li>
-<li>Fehlplanung oder fehlende Anpassung ,</li>
-<li>Offenlegung schützenswerter Informationen ,</li>
-<li>Informationen oder Produkte aus unzuverlässiger Quelle ,</li>
-<li>Manipulation von Hard- oder Software ,</li>
-<li>Manipulation von Informationen ,</li>
-<li>Unbefugtes Eindringen in IT-Systeme ,</li>
-<li>Zerstörung von Geräten oder Datenträgern ,</li>
-<li>Ausfall von Geräten oder Systemen ,</li>
-<li>Fehlfunktion von Geräten oder Systemen ,</li>
-<li>Ressourcenmangel ,</li>
-<li>Software-Schwachstellen oder -Fehler ,</li>
-<li>Verstoß gegen Gesetze oder Regelungen ,</li>
-<li>Unberechtigte Nutzung oder Administration von Geräten und Systemen ,</li>
-<li>Fehlerhafte Nutzung oder Administration von Geräten und Systemen ,</li>
-<li>Missbrauch von Berechtigungen ,</li>
-<li>Personalausfall ,</li>
-<li>Anschlag ,</li>
-<li>Nötigung, Erpressung oder Korruption ,</li>
-<li>Identitätsdiebstahl ,</li>
-<li>Abstreiten von Handlungen ,</li>
-<li>Missbrauch personenbezogener Daten ,</li>
-<li>Schadprogramme ,</li>
-<li>Verhinderung von Diensten (Denial of Service) ,</li>
-<li>Sabotage ,</li>
-<li>Social Engineering ,</li>
-<li>Einspielen von Nachrichten ,</li>
-<li>Unbefugtes Eindringen in Räumlichkeiten ,</li>
-<li>Datenverlust ,</li>
-<li>Integritätsverlust schützenswerter Informationen ,</li>
-<li>Schädliche Seiteneffekte IT-gestützter Angriffe ,</li>
-<li>Social Engineering ,</li>
-<li>Einspielen von Nachrichten ,</li>
-<li>Unbefugtes Eindringen in Räumlichkeiten ,</li>
-<li>Datenverlust ,</li>
-<li>Integritätsverlust schützenswerter Informationen ,</li>
-<li>Schädliche Seiteneffekte IT-gestützter Angriffe . </li></ul>
+<ul><li>Feuer</li>
+<li>Ungünstige klimatische Bedingungen</li>
+<li>Wasser</li>
+<li>Verschmutzung, Staub, Korrosion</li>
+<li>Naturkatastrophen</li>
+<li>Katastrophen im Umfeld</li>
+<li>Großereignisse im Umfeld</li>
+<li>Ausfall oder Störung der Stromversorgung</li>
+<li>Ausfall oder Störung von Kommunikationsnetzen</li>
+<li>Ausfall oder Störung von Versorgungsnetzen</li>
+<li>Ausfall oder Störung von Dienstleistungsunternehmen</li>
+<li>Elektromagnetische Störstrahlung</li>
+<li>Abfangen kompromittierender Strahlung</li>
+<li>Ausspähen von Informationen (Spionage)</li>
+<li>Abhören</li>
+<li>Diebstahl von Geräten, Datenträgern oder Dokumenten</li>
+<li>Verlust von Geräten, Datenträgern oder Dokumenten</li>
+<li>Fehlplanung oder fehlende Anpassung</li>
+<li>Offenlegung schützenswerter Informationen</li>
+<li>Informationen oder Produkte aus unzuverlässiger Quelle</li>
+<li>Manipulation von Hard- oder Software</li>
+<li>Manipulation von Informationen</li>
+<li>Unbefugtes Eindringen in IT-Systeme</li>
+<li>Zerstörung von Geräten oder Datenträgern</li>
+<li>Ausfall von Geräten oder Systemen</li>
+<li>Fehlfunktion von Geräten oder Systemen</li>
+<li>Ressourcenmangel</li>
+<li>Software-Schwachstellen oder -Fehler</li>
+<li>Verstoß gegen Gesetze oder Regelungen</li>
+<li>Unberechtigte Nutzung oder Administration von Geräten und Systemen</li>
+<li>Fehlerhafte Nutzung oder Administration von Geräten und Systemen</li>
+<li>Missbrauch von Berechtigungen</li>
+<li>Personalausfall</li>
+<li>Anschlag</li>
+<li>Nötigung, Erpressung oder Korruption</li>
+<li>Identitätsdiebstahl</li>
+<li>Abstreiten von Handlungen</li>
+<li>Missbrauch personenbezogener Daten</li>
+<li>Schadprogramme</li>
+<li>Verhinderung von Diensten (Denial of Service)</li>
+<li>Sabotage</li>
+<li>Social Engineering</li>
+<li>Einspielen von Nachrichten</li>
+<li>Unbefugtes Eindringen in Räumlichkeiten</li>
+<li>Datenverlust</li>
+<li>Integritätsverlust schützenswerter Informationen</li>
+<li>Schädliche Seiteneffekte IT-gestützter Angriffe</li>
+<li>Social Engineering</li>
+<li>Einspielen von Nachrichten</li>
+<li>Unbefugtes Eindringen in Räumlichkeiten</li>
+<li>Datenverlust</li>
+<li>Integritätsverlust schützenswerter Informationen</li>
+<li>Schädliche Seiteneffekte IT-gestützter Angriffe </li></ul>
 <h2><a name="Prozess-2d-Bausteine"></a><b>Prozess-Bausteine</b> </h2>
 <p>Sicherheitsmanagement (ISMS) </p>
 <h3><a name="Organisation-und-Personal--28-ORP-29-"></a><b>Organisation und Personal (ORP)</b> </h3>
@@ -550,7 +577,7 @@ snippets,vorlagen,lernen,verstehen,
 <ul><li>8 Zeichen = 2(hoch)n=94(hoch)8</li>
 <ul><li>N =~ 52,8</li>
 <li>entspricht 53-bit</li></ul>
-<li>>64-bit = 2(hoch)64=94(hoch)L</li>
+<li>64-bit = 2(hoch)64=94(hoch)L</li>
 <ul><li>L =~ 11,3</li>
 <li>entspricht 12 Zeichen</li></ul>
 <li>128-bit = 2(hoch)128=94(hoch)L</li>
@@ -613,12 +640,7 @@ snippets,vorlagen,lernen,verstehen,
 <ul><li>Offline- / Standby-USV, schützt vor Folgen bei…
 <ul><li>Stromausfall…</li></ul></li>
 <li>4-10 ms Umschaltzeit</li></ul></li></ul></li>
-<li>zentral-verschlüsselte E-Mails
-<ul><li>digital-signiert durch TLS/SSL-Zertifikate
-<ul><li><b>POP3</b> Post-Office Protocol (Port 995)</li>
-<li><b>IMAP</b> Internet Message Access Protocol (Port 993)</li>
-<li><b>SMTP</b> Simple Mail Transfer Protocol (Port 465/587) </li>
-</ul></li></ul></li></ul></td></tr></table>
+</ul></td></tr></table>
 
 </article>
 </div>
